OOP: docs: Ignore more files format.
Signed-off-by: Edward Wu <bluehome.wu@gmail.com>

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,12 @@
+# Ignore common use compressed file format.
+*.tar.gz
+*.zip
+*.7z
+*.rar
+
+# Ignore log file format.
+*.log
+
 # VSCode configuration directory.
 .vscode/
 
